<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/toggleUseAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/toggle_alarm_use"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleUseAlarm">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_description" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_00" />

            <Switch
                android:id="@+id/toggleHour12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_12" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_01" />

            <Switch
                android:id="@+id/toggleHour13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_13" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_02" />

            <Switch
                android:id="@+id/toggleHour14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_14" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_03" />

            <Switch
                android:id="@+id/toggleHour15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_04" />

            <Switch
                android:id="@+id/toggleHour16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_16" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_05" />

            <Switch
                android:id="@+id/toggleHour17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_17" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_06" />

            <Switch
                android:id="@+id/toggleHour18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_18" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_07" />

            <Switch
                android:id="@+id/toggleHour19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_19" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_08" />

            <Switch
                android:id="@+id/toggleHour20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_20" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_09" />

            <Switch
                android:id="@+id/toggleHour21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_21" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_10" />

            <Switch
                android:id="@+id/toggleHour22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_22" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/toggleHour11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_11" />

            <Switch
                android:id="@+id/toggleHour23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_23" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>